[gd_scene load_steps=3 format=3 uid="uid://dhplfa2bx4hvp"]

[ext_resource type="Script" path="res://03-Shared/menu_layout.gd" id="1_f3jh3"]
[ext_resource type="Texture2D" uid="uid://bxwxffcehv7v6" path="res://01-Menu/asset/Nada-Explorer_Logo.png" id="2_u5fli"]

[node name="MenuLayout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3jh3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="Sprite2D" parent="."]
visible = false
position = Vector2(120, 126)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_u5fli")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 406.0
offset_right = 220.0
offset_bottom = 963.0

[node name="LogoButton" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 14.0
offset_right = 853.0
offset_bottom = 828.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("2_u5fli")

[node name="EnterButton" type="Button" parent="Panel"]
visible = false
layout_mode = 2
offset_left = 25.0
offset_top = 152.0
offset_right = 175.0
offset_bottom = 207.0
text = "Enter"

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 20.0
offset_right = 175.0
offset_bottom = 127.0
text = "Back"

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 222.0
offset_right = 175.0
offset_bottom = 278.0
text = "Exit"

[node name="HSeparator" type="HSeparator" parent="Panel"]
layout_mode = 0
offset_top = 262.0
offset_right = 200.0
offset_bottom = 339.0

[node name="GitHubButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 330.0
offset_right = 175.0
offset_bottom = 380.0
text = "Github"

[node name="XButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 405.0
offset_right = 175.0
offset_bottom = 455.0
text = "X.com"

[node name="ItchIoButton" type="Button" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 481.0
offset_right = 175.0
offset_bottom = 531.0
text = "ItchIO"

[connection signal="pressed" from="Panel/LogoButton" to="." method="_on_logo_button_pressed"]
[connection signal="pressed" from="Panel/EnterButton" to="." method="_on_enter_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/GitHubButton" to="." method="_on_git_hub_button_pressed"]
[connection signal="pressed" from="Panel/XButton" to="." method="_on_x_button_pressed"]
[connection signal="pressed" from="Panel/ItchIoButton" to="." method="_on_itch_io_button_pressed"]
